NetworkPolicies/Backend-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-np 
  namespace: default 
spec:
  podSelector:  
    matchLabels:
      app: backend 
  policyTypes:  
  - Ingress      
  - Egress
  ingress:
  - from:
      podSelector:
        matchLabels: 
          app: frontend
  egress:
  - to:
    - namespaceSelector:  
        matchLabels:
          ns: database-ns
