NetworkPolicies/default-deny-database-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-database
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
